Scrollbar fixes

--- a/client/src/style/main.less
+++ b/client/src/style/main.less
@@ -20,7 +20,7 @@
     }
   }
 
-  & > .content {
+  .content {
     padding: @divisor / 2 @divisor 0 @divisor;
     color: @light-grey;
     width: 100%;
